sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:9: error: not found: value v
      if (!plusPetitQue(j,v)){
                          ^AlgInsertionSort:14: error: not found: value v
    setValeur(v,l)
              ^